samples/_failures_safe/1761790188_ce875b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_138005e1.c: In function ‘main’:
./samples/SAFE/__tmp_138005e1.c:137:9: error: expected expression at end of input
  137 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_138005e1.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_138005e1.c:137:9: error: expected declaration or statement at end of input
